--- a/public/style.css
+++ b/public/style.css
@@ -46,7 +46,6 @@ h1 {
   border-radius: 20px;
   max-width: 80%;
   display: inline-block;
-  overflow: auto;
 }
 
 .message.user {
@@ -104,6 +103,10 @@ form button[type='submit']:disabled {
 .message.bot.loading::after {
   content: '...';
   animation: dots 1.5s steps(3, end) infinite;
+}
+
+.message pre {
+  overflow: auto;
 }
 
 @keyframes dots {
